<resources>
    <string name="app_name" translatable="false">Présent !</string>

    <string-array name="duree" translatable="false">
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>

    </string-array>

    <string name="launchCall">Lorem Ipsum dzenfknre fjznfjerng trhjnrntmhs trhinhrrhj drhidtnhoinr
    gtrnbjtr rb drntj rdt rtutdlijn fjerjgtrjh rjgbbjtrbrjk
    rgbrjbtjbhjrtnjhnj gtrnbjn rtjn</string>


    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="header_generate_code">Blah Blah</string>
    <string name="empty_text">Lorem ipsum dolor sit amet, sapien etiam, nunc amet
    dolor ac odio mauris justo. Luctus arcu, ur,a preasent at id quisque ac. Arcu
    es massa vestibulum malesuada, integer vivamus elit eu mauris eus, cum eros quis
    aliquam wisi. Nulla wisi laoreet suspendisse integer vivamus elit eu mauris
    henderit facilisi, mi mattis pariatur aliquam pharetra eget.</string>


    <string name="login">Login</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="launch_new_call">Lancer un appel</string>
    <string name="event_name">Nom d\'évènement</string>
    <string name="respond_call">Répondre à un appel</string>
    <string name="consult_calls">Consulter un appel</string>
    <string name="generate_code_no_groupe">Générer un code</string>
    <string name="chose_group">Choisir un groupe</string>

    <string name="success_message_header">Succès</string>
    <string name="success_message_text">Vous venez de vous déclarer présent pour au contrôle de présence.</string>
    <string name="error_message_header">Echec</string>
    <string name="error_message_text">Erreur de code. Veuillez réessayer.</string>
    <string name="success_message_header">Succès</string>
    <string name="success_message_text">Vous venez de vous déclarer présent pour au contrôle de présence.</string>
    <string name="error_message_header">Echec</string>
    <string name="error_message_text">Erreur de code. Veuillez réessayer.</string>

</resources>
