<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="60dp"
            android:inputType="textPersonName"
            android:hint="Entrer votre code"
            android:ems="10"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
            />

        <Button
            android:id="@+id/enter_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="50dp"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/accent_button"
            android:text="@string/app_name"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:ignore="UselessParent">

            <android.support.v7.widget.CardView
                android:id="@+id/success_message_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:paddingBottom="20dp"
                ht="20dp"
         "20dp"
                android:paddingEnd='androi
                isible"'
                an
                ="20dp"
                a>

                <TextView
                    android:id="@+id/success_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="35dp"
                    android:text="@string/success_message_header"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/success_message_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="45dp"
                    android:text="@string/success_message_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13dp" />

                <Button
                    android:id="@+id/return_dashboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/accent_button"
                    android:text="Retourner Dashboard"
                    android:textColor="@android:color/background_light"


                    />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>