<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="fr.ensicaen.present.present.view.launchcall.LaunchCallActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">


        <Spinner
            android:id="@+id/time_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:entries="@array/duree" />

        <EditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/event_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_dark" />

        <Button
            android:id="@+id/launchCall"
            style="@style/accent_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/launch_new_call"
            android:textColor="@android:color/background_light"
            android:visibility="visible" />

        <android.support.v7.widget.CardView
            android:id="@+id/code_result_mesg_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <LinearLayout
                android:id="@+id/successCall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="91dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/check"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Code créé !"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="0dp"
                    android:text="@string/launchCall" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


    </ScrollView>
    <include layout="@layout/include_progress_overlay" />
</FrameLayout>